# ChangeLog for dev-perl/Class-MOP
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MOP/ChangeLog,v 1.27 2009/10/12 12:11:27 tove Exp $

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.92.ebuild,
  -Class-MOP-0.93.ebuild:
  Cleanup

*Class-MOP-0.94 (23 Sep 2009)

  23 Sep 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.94.ebuild:
  Version bump

*Class-MOP-0.93 (17 Sep 2009)

  17 Sep 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.93.ebuild:
  Version bump

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.89.ebuild,
  -Class-MOP-0.90.ebuild, -Class-MOP-0.91.ebuild:
  Cleanup

*Class-MOP-0.92 (15 Aug 2009)

  15 Aug 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.92.ebuild:
  Version bump

*Class-MOP-0.91 (02 Aug 2009)

  02 Aug 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.91.ebuild:
  Version bump

*Class-MOP-0.90 (22 Jul 2009)

  22 Jul 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.90.ebuild:
  Version bump

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.84.ebuild,
  -Class-MOP-0.85.ebuild, -Class-MOP-0.86.ebuild, -Class-MOP-0.87.ebuild,
  -Class-MOP-0.88.ebuild:
  Cleanup

*Class-MOP-0.89 (04 Jul 2009)

  04 Jul 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.89.ebuild:
  Version bump

*Class-MOP-0.88 (24 Jun 2009)

  24 Jun 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.88.ebuild:
  Version bump

*Class-MOP-0.87 (22 Jun 2009)

  22 Jun 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.87.ebuild:
  Version bump

*Class-MOP-0.86 (16 Jun 2009)

  16 Jun 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.86.ebuild:
  Version bump

*Class-MOP-0.85 (07 Jun 2009)

  07 Jun 2009; Torsten Veller <tove@gentoo.org> +Class-MOP-0.85.ebuild:
  Version bump

  30 May 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.83.ebuild,
  Class-MOP-0.84.ebuild:
  Cleanup and remove Task-Weaken

*Class-MOP-0.84 (14 May 2009)
