@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MOP/Attic/Class-MOP-0.94.ebuild,v 1.1 2009/09/23 18:56:31 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MOP/Attic/Class-MOP-0.94.ebuild,v 1.2 2009/10/26 13:54:04 volkmar Exp $
 
 EAPI=2
 
@@ -10,7 +10,7 @@ inherit perl-module
 DESCRIPTION="A Meta Object Protocol for Perl 5"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="test"
 
 RDEPEND="
