@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/Attic/Moose-0.92.ebuild,v 1.1 2009/09/23 19:00:54 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/Attic/Moose-0.92.ebuild,v 1.2 2009/10/26 13:56:25 volkmar Exp $
 
 EAPI=2
 
@@ -10,7 +10,7 @@ inherit perl-module
 DESCRIPTION="A postmodern object system for Perl 5"
 
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="~amd64 ~ppc ~x86"
 IUSE="test"
 
 RDEPEND="dev-perl/Data-OptList
