@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Moose
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.31 2009/10/12 11:46:12 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Moose/ChangeLog,v 1.32 2009/10/26 13:56:25 volkmar Exp $
+
+  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> Moose-0.92.ebuild:
+  Keywording for ppc, bug 283244
 
   12 Oct 2009; Torsten Veller <tove@gentoo.org> -Moose-0.89.ebuild,
   -Moose-0.90.ebuild, -Moose-0.91.ebuild:
