@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Class-MOP
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MOP/ChangeLog,v 1.27 2009/10/12 12:11:27 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Class-MOP/ChangeLog,v 1.28 2009/10/26 13:54:04 volkmar Exp $
+
+  26 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> Class-MOP-0.94.ebuild:
+  Keywording for ppc, bug 283244
 
   12 Oct 2009; Torsten Veller <tove@gentoo.org> -Class-MOP-0.92.ebuild,
   -Class-MOP-0.93.ebuild:
